--- a/Samples/Win32-Http/Win32Http.vcxproj
+++ b/Samples/Win32-Http/Win32Http.vcxproj
@@ -103,6 +103,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\..\External\bondlite\include;$(ProjectDir)..\..\External\lib\include\aria;$(ProjectDir)..\..\External\lib\include\public;$(ProjectDir)..\..\External\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -135,6 +136,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\..\External\bondlite\include;$(ProjectDir)..\..\External\lib\include\aria;$(ProjectDir)..\..\External\lib\include\public;$(ProjectDir)..\..\External\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
